RESOLVED FIXED 92324
flex-wrap: wrap not wrapping for % sized items in column flow
https://bugs.webkit.org/show_bug.cgi?id=92324
Summary flex-wrap: wrap not wrapping for % sized items in column flow
Scott Miles
Reported 2012-07-25 17:32:53 PDT
Created attachment 154502 [details] flex-wrap samples highlighting failing configuration %-sized flex items not wrapping under flex-flow: column wrap (they do in fact wrap under flex-flow: row wrap)
Attachments
flex-wrap samples highlighting failing configuration (1.73 KB, text/html)
2012-07-25 17:32 PDT, Scott Miles
no flags
Patch (8.23 KB, patch)
2012-07-26 16:44 PDT, Tony Chang
no flags
Archive of layout-test-results from gce-cr-linux-07 (581.21 KB, application/zip)
2012-07-27 00:19 PDT, WebKit Review Bot
no flags
Patch for landing (8.17 KB, patch)
2012-07-27 11:29 PDT, Tony Chang
no flags
Ojan Vafai
Comment 1 2012-07-26 08:39:34 PDT
Yup, definitely a bug.
Tony Chang
Comment 2 2012-07-26 16:44:35 PDT
WebKit Review Bot
Comment 3 2012-07-27 00:19:50 PDT
Comment on attachment 154786 [details] Patch Attachment 154786 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13369269 New failing tests: css3/flexbox/percentage-heights.html
WebKit Review Bot
Comment 4 2012-07-27 00:19:54 PDT
Created attachment 154861 [details] Archive of layout-test-results from gce-cr-linux-07 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-07 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Tony Chang
Comment 5 2012-07-27 11:29:38 PDT
Created attachment 154994 [details] Patch for landing
Tony Chang
Comment 6 2012-07-27 11:30:57 PDT
(In reply to comment #3) > (From update of attachment 154786 [details]) > Attachment 154786 [details] did not pass chromium-ews (chromium-xvfb): > Output: http://queues.webkit.org/results/13369269 > > New failing tests: > css3/flexbox/percentage-heights.html I'm dumb. I had changed the height/width properties of the flexbox to min-height/min-width because I was testing if I needed to handle that. I forgot to change it back when I uploaded the diff. I'll let the commit queue land this to verify that the new test is correct.
WebKit Review Bot
Comment 7 2012-07-27 12:46:29 PDT
Comment on attachment 154994 [details] Patch for landing Clearing flags on attachment: 154994 Committed r123909: <http://trac.webkit.org/changeset/123909>
WebKit Review Bot
Comment 8 2012-07-27 12:46:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.