Source/WebCore: flex-wrap: wrap not wrapping for % sized items in column flow https://bugs.webkit.org/show_bug.cgi?id=92324

Patch by Tony Chang <tony@chromium.org> on 2012-07-27
Reviewed by Ojan Vafai.

We were using trying to use the value of contentLogicalHeight() before having called computeLogicalHeight()
in a few places. Fix this in mainAxisContentExtent() rather than at the callers.

Test: css3/flexbox/percentage-heights.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::mainAxisContentExtent):
(WebCore::RenderFlexibleBox::preferredMainAxisContentExtentForChild): If we haven't called computeLogicalHeight, we try to compute
the height based on the fixed flexbox value. min/max don't matter here since percent values are only based on height/width.
* rendering/RenderFlexibleBox.h: Drop const because computeContentLogicalHeightUsing is not const. I can
try making computeContentLogicalHeightUsing const in a follow up change (might be non-trivial).

Source/WebKit2: Show the unavailable plug-in indicator for Java applets as well
https://bugs.webkit.org/show_bug.cgi?id=92521

Patch by Anders Carlsson <andersca@apple.com> on 2012-07-27
Reviewed by Sam Weinig.

* WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::unavailablePluginButtonClicked):
This can now be called on applet elements as well.

* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::createJavaAppletWidget):
Get the MIME type from the applet element.

LayoutTests: flex-wrap: wrap not wrapping for % sized items in column flow
https://bugs.webkit.org/show_bug.cgi?id=92324

Patch by Tony Chang <tony@chromium.org> on 2012-07-27
Reviewed by Ojan Vafai.

Test cases for column flow with percentage heights. There are three
test cases for the three callers of mainAxisContentExtent() that were
broken by this.

* css3/flexbox/percentage-heights-expected.txt: Added.
* css3/flexbox/percentage-heights.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@123909 bbb929c8-8fbe-4397-9dbb-9b2b20218538